Fix the gap

--- a/css/checkoutResponsive.css
+++ b/css/checkoutResponsive.css
@@ -156,6 +156,7 @@ form {position: relative;}
   color: #444;
   left: 22px;
   font-size: 0;
+  line-height: 0;
 }
 
 
